...
                name = "Alex",
                avatarUrl = "https://lh3.googleusercontent.com/aida-public/AB6AXuCAZTTl1dYqg1Zcop8JVoWzFHtL2BL1mA8Es7oih4H6ocgUNFWpHqf-SLQ5kLY4h-fLEeSAmP4SFuHc3Hl2jUnVqO-tDHUOg7kupe4ZoW-xctftiJKbLBx6k2KAXVJaNQ7svhwr-jomJYvz080A28Tdp7rYwMSUZuyY9e5CEqilXkehFH15RCQlg5COT-14sNzedDpHP2Dp-tfCcUIUjA9-IGG3VEZM-GhXxDEerK32VkxygVanyAC_tukQ1IBD4VqBB4V64QiWJiYz",
                isActive = true,
                lastActiveText = "Active 2m ago",
                isRecent = true,
                recentMessageText = "Are we still on for tonight?",
                recentMessageTime = "2m ago",
                recentMessageIsUnread = true
            ),
            Contact(
                id = "sam",
                name = "Sam",
                avatarUrl = "https://lh3.googleusercontent.com/aida-public/AB6AXuCOXPbVV7NsGOYkwfWqnAGXfDT13OIgpnPD5s3T-ka_L2luCX1hEghMDjPm3nfkqgGdcWRP9aGKR18tfIvZILdqfRR2cQ6ucwkqbiFvPs6zGeGuzSvCoPm7uwyn35FCeke4iz7qqn1mh4HMzSv8Z1hFGtcJQnVFlo7Zeq812bI1fIkzbhngJ2jEs4voMqqqnd7dsD7y5cOxwAUy8SEpsP7HEs6a1HS24_eB9POLbKoQWwlE1TUkPtt73jdLTKQPuk0no2P2y_sIhsdc",
...
